--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-paginate": "^8.3.1",
+    "react-paginate": "^8.2.0",
     "sass": "^1.70.0",
     "sitemap": "^7.1.1",
-    "swiper": "^11.1.5"
+    "swiper": "^11.1.4"
   }
 }
